--- a/src/containers/Blog/Blog.module.css
+++ b/src/containers/Blog/Blog.module.css
@@ -1,7 +1,35 @@
 .Posts {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    width: 80%;
-    margin: auto;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  width: 80%;
+  margin: auto;
+}
+
+.Posts:hover,
+.Posts:active {
+  color: #110f0e;
+}
+
+.Blog ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.Blog li {
+  display: inline-block;
+  margin: 20px;
+}
+
+.Blog a {
+  text-decoration: none;
+  color: black;
+}
+
+.Blog:hover,
+.Blog:active {
+  color: #fa923f;
 }
